_patterns/header/header.css
.nav-btn:hover {
  border-bottom: 4px solid var(--color-secondary);
  transition: all 135ms ease;
}

.logo {
  display: inline-block;
}

.logo:hover {
  transform: scale(1.1);
  transition: all 135ms ease;
}

.nav-btn {
  border-bottom: 4px solid transparent;
}

.nav-current {
  font-weight: bold;
  color: var(--color-secondary);
  border-bottom: 4px solid var(--color-secondary);
}

header {
  background-color: var(--color-accent-white);
}

.stay {
  position: fixed;
  top: 0;
  width: 100%;
}

.logo-p {
  text-align: center;
}

.nav {
  text-align: center;
}

@media only screen and (min-width: 38em) {

    .logo-p {
      text-align: left;
    }

    .nav {
      text-align: right;
    }

}

